# animeboys-bot

./: .gitignore  Cargo.toml  Dockerfile
.circleci/: config.yml
scripts/: main.py  output.json
src/: lib.rs  main.rs
src/aws/: command.rs  ec2.rs  ecs_commands.rs  error.rs  mod.rs
src/bot/: bot.rs  mod.rs
src/chatgpt/: animeboys_ai.rs  command.rs  mod.rs
src/wz/: mod.rs  types.rs  wz_commands.rs
