[package]
name = "animeboys-bot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "animeboys-bot"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"

aws-config = "0.54.1"
aws-sdk-ec2 = "0.24.0"
aws-types = "0.54.1"
tracing-subscriber = "0.3.17"
reqwest = "0.11.21"
serde = "1.0.188"
serde_json = "1.0.107"
phf = { version = "0.11.2", features = ["macros"] }
dotenv = "0.15.0"
chatgpt_rs = { version = "1.2.3", features = ["streams"] }
